--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,11 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swipeRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="389dp"
             android:layout_height="0dp"
@@ -15,6 +20,8 @@
             android:id="@+id/recyclerView"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginBottom="8dp"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     <Button
             android:text="@string/bt_name_addjoke"
             android:layout_width="162dp"
@@ -30,7 +37,7 @@
             android:id="@+id/progressBar"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/recyclerView"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/swipeContainer"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="invisible"/>
 
