--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
         tools:context=".MainActivity">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -37,7 +36,7 @@
             android:id="@+id/progressBar"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/swipeContainer"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/swipeRefreshLayout"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="invisible"/>
 
